fixed the alignment difference in the error panel when no trigger is present

--- a/src/client/app/flogo.flows.detail/components/canvas.component.less
+++ b/src/client/app/flogo.flows.detail/components/canvas.component.less
@@ -32,10 +32,6 @@
   transition: width .5s;
 }
 
-.canvas-flow--maximized {
-  width: 100%;
-}
-
 .flogo-flow-container {
   flex: 1;
   overflow: auto;
